--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>dev.finance$</title>
 </head>
 <body>
-    <h1>Olá Mundo</h1>
+    <h1><img src="/img/logo.svg" alt="logo dev.finance"></h1>
 </body>
 </html>
