--- a/index.html
+++ b/index.html
@@ -4,9 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
     <title>dev.finance$</title>
 </head>
 <body>
-    <h1><img src="/img/logo.svg" alt="logo dev.finance"></h1>
+    <header id="header">
+        <h1><img src="/img/logo.svg" alt="logo dev.finance"></h1>
+    </header>
+    <main class="" id="main">
+        <section class="cards">
+            <div class="incoming">
+                <h3>Entradas</h3>
+                <p>R$ 5.056,00<p>
+            </div>
+            <div class="expenses">
+                <h3>Saídas</h3>
+                <p>R$ 4.356,00<p>
+            </div>
+            <div class="total">
+                <h3>Total</h3>
+                <p>R$ 1.056,00</p>
+            </div>
+        </section>
+        <section class="container" id="balance"> 
+            <table id="data-table">
+                <thead>
+                    <tr>
+                        <th>Descricão</th>
+                        <th>Valor</th>
+                        <th>Data</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Web Site</td>
+                        <td>+R$ 2.000,00</td>
+                        <td>23/02/2022</td>
+                    </tr>
+                    <tr>
+                        <td>Lanche Coisa Boa</td>
+                        <td>-R$ 50,00</td>
+                        <td>25/02/2022</td>
+                    </tr>
+                    <tr>
+                        <td>Conta Energia</td>
+                        <td>-R$ 220,00</td>
+                        <td>27/02/2022</td>
+                    </tr>
+                    <tr>
+                        <td>Pix Recebido</td>
+                        <td>+R$  500,00</td>
+                        <td>28/02/2022</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
+    <footer>
+        <p>dev.finance$</p>
+    </footer>
 </body>
 </html>
