--- a/index.html
+++ b/index.html
@@ -17,15 +17,24 @@
     <main class="" id="main">
         <section class="cards">
             <div class="incoming">
-                <h3>Entradas</h3>
+                <div class="text-incoming">
+                    <h3>Entradas</h3>
+                    <img src="/img/up-arrow.svg" alt="" srcset="">
+                </div>
                 <p>R$ 5.056,00<p>
             </div>
             <div class="expenses">
-                <h3>Saídas</h3>
+                <div class="text-expenses">
+                    <h3>Saídas</h3>
+                    <img src="/img/down-arrow.svg" alt="">
+                </div>
                 <p>R$ 4.356,00<p>
             </div>
             <div class="total">
-                <h3>Total</h3>
+                <div class="text-total">
+                    <h3>Total</h3>
+                    <img src="/img/money.svg" alt="">
+                </div>
                 <p>R$ 1.056,00</p>
             </div>
         </section>
@@ -40,24 +49,24 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Web Site</td>
-                        <td>+R$ 2.000,00</td>
-                        <td>23/02/2022</td>
+                        <td class="descript">Web Site</td>
+                        <td class="positive">+R$ 2.000,00</td>
+                        <td class="data">23/02/2022</td>
                     </tr>
                     <tr>
-                        <td>Lanche Coisa Boa</td>
-                        <td>-R$ 50,00</td>
-                        <td>25/02/2022</td>
+                        <td class="descript">Lanche Coisa Boa</td>
+                        <td class="negative">-R$ 50,00</td>
+                        <td class="data">25/02/2022</td>
                     </tr>
                     <tr>
-                        <td>Conta Energia</td>
-                        <td>-R$ 220,00</td>
-                        <td>27/02/2022</td>
+                        <td class="descript">Conta Energia</td>
+                        <td class="negative">-R$ 220,00</td>
+                        <td class="data">27/02/2022</td>
                     </tr>
                     <tr>
-                        <td>Pix Recebido</td>
-                        <td>+R$  500,00</td>
-                        <td>28/02/2022</td>
+                        <td class="descript">Pix Recebido</td>
+                        <td class="positive">+R$  500,00</td>
+                        <td class="data">28/02/2022</td>
                     </tr>
                 </tbody>
             </table>
