--- a/index.html
+++ b/index.html
@@ -11,69 +11,84 @@
     <title>dev.finance$</title>
 </head>
 <body>
+    <div class="container-modal">
+        <div class="modal">
+            <h2>Nova Transação</h2>
+            <div class="input-modal">
+            <input type="text" placeholder="Descricão" name="" id="">
+            <input type="number" placeholder="0,00" name="" id="">
+            <p>use o sinal -(negativo) para despesas e , (virgula) para casas decimais</p>
+            <input class="select-data" type="date" name="" id="">
+            </div>
+            <div class="btns-modal">
+                <button class="btn-cancel">Cancelar</button>
+                <button class="btn-salve">Salvar</button>
+            </div>
+        </div>
     <header id="header">
-        <h1><img src="/img/logo.svg" alt="logo dev.finance"></h1>
+            <h1><img src="/img/logo.svg" alt="logo dev.finance"></h1>
     </header>
     <main class="" id="main">
-        <section class="cards">
-            <div class="incoming">
-                <div class="text-incoming">
-                    <h3>Entradas</h3>
-                    <img src="/img/up-arrow.svg" alt="" srcset="">
+            <section class="cards">
+                <div class="incoming">
+                    <div class="text-incoming">
+                        <h3>Entradas</h3>
+                        <img src="/img/up-arrow.svg" alt="" srcset="">
+                    </div>
+                    <p>R$ 5.056,00<p>
                 </div>
-                <p>R$ 5.056,00<p>
-            </div>
-            <div class="expenses">
-                <div class="text-expenses">
-                    <h3>Saídas</h3>
-                    <img src="/img/down-arrow.svg" alt="">
+                <div class="expenses">
+                    <div class="text-expenses">
+                        <h3>Saídas</h3>
+                        <img src="/img/down-arrow.svg" alt="">
+                    </div>
+                    <p>R$ 4.356,00<p>
                 </div>
-                <p>R$ 4.356,00<p>
-            </div>
-            <div class="total">
-                <div class="text-total">
-                    <h3>Total</h3>
-                    <img src="/img/money.svg" alt="">
+                <div class="total">
+                    <div class="text-total">
+                        <h3>Total</h3>
+                        <img src="/img/money.svg" alt="">
+                    </div>
+                    <p>R$ 1.056,00</p>
                 </div>
-                <p>R$ 1.056,00</p>
-            </div>
-        </section>
-        <section class="container" id="balance"> 
-            <table id="data-table">
-                <thead>
-                    <tr>
-                        <th>Descricão</th>
-                        <th>Valor</th>
-                        <th>Data</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="descript">Web Site</td>
-                        <td class="positive">+R$ 2.000,00</td>
-                        <td class="data">23/02/2022</td>
-                    </tr>
-                    <tr>
-                        <td class="descript">Lanche Coisa Boa</td>
-                        <td class="negative">-R$ 50,00</td>
-                        <td class="data">25/02/2022</td>
-                    </tr>
-                    <tr>
-                        <td class="descript">Conta Energia</td>
-                        <td class="negative">-R$ 220,00</td>
-                        <td class="data">27/02/2022</td>
-                    </tr>
-                    <tr>
-                        <td class="descript">Pix Recebido</td>
-                        <td class="positive">+R$  500,00</td>
-                        <td class="data">28/02/2022</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+            </section>
+            <section class="container" id="balance"> 
+                <table id="data-table">
+                    <thead>
+                        <tr>
+                            <th>Descricão</th>
+                            <th>Valor</th>
+                            <th>Data</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="descript">Web Site</td>
+                            <td class="positive">+R$ 2.000,00</td>
+                            <td class="data">23/02/2022</td>
+                        </tr>
+                        <tr>
+                            <td class="descript">Lanche Coisa Boa</td>
+                            <td class="negative">-R$ 50,00</td>
+                            <td class="data">25/02/2022</td>
+                        </tr>
+                        <tr>
+                            <td class="descript">Conta Energia</td>
+                            <td class="negative">-R$ 220,00</td>
+                            <td class="data">27/02/2022</td>
+                        </tr>
+                        <tr>
+                            <td class="descript">Pix Recebido</td>
+                            <td class="positive">+R$  500,00</td>
+                            <td class="data">28/02/2022</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
     </main>
     <footer>
         <p>dev.finance$</p>
     </footer>
+</div>
 </body>
 </html>
