--- a/index.html
+++ b/index.html
@@ -11,30 +11,16 @@
     <title>dev.finance$</title>
 </head>
 <body>
-    <div class="container-modal">
-        <div class="modal">
-            <h2>Nova Transação</h2>
-            <div class="input-modal">
-            <input type="text" placeholder="Descricão" name="" id="">
-            <input type="number" placeholder="0,00" name="" id="">
-            <p>use o sinal -(negativo) para despesas e , (virgula) para casas decimais</p>
-            <input class="select-data" type="date" name="" id="">
-            </div>
-            <div class="btns-modal">
-                <button class="btn-cancel">Cancelar</button>
-                <button class="btn-salve">Salvar</button>
-            </div>
-        </div>
-    </div>
     <header id="header">
-            <h1><img src="/img/logo.svg" alt="logo dev.finance"></h1>
+            <h1><img src="/img/logo.svg" alt="logo dev finance"></h1>
     </header>
-    <main class="" id="main">
+    <main class="container" id="main">
+        
             <section class="cards">
                 <div class="incoming">
                     <div class="text-incoming">
                         <h3>Entradas</h3>
-                        <img src="/img/up-arrow.svg" alt="" srcset="">
+                        <img src="/img/up-arrow.svg" alt="Icone de entradas" srcset="">
                     </div>
                     <p>R$ 5.056,00<p>
                 </div>
@@ -54,12 +40,14 @@
                 </div>
             </section>
             <section class="container" id="balance"> 
+                <a onclick="Modal.open()" class="new-transaction" href="#">+ Nova Transação</a>
                 <table id="data-table">
                     <thead>
                         <tr>
                             <th>Descricão</th>
                             <th>Valor</th>
                             <th>Data</th>
+                            <th>Add/Remove</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -67,28 +55,65 @@
                             <td class="descript">Web Site</td>
                             <td class="positive">+R$ 2.000,00</td>
                             <td class="data">23/02/2022</td>
+                            <td><img src="/img/credit.svg" alt="Icone Credit" srcset=""></td>
                         </tr>
                         <tr>
                             <td class="descript">Lanche Coisa Boa</td>
                             <td class="negative">-R$ 50,00</td>
                             <td class="data">25/02/2022</td>
+                            <td><img src="/img/cost.svg" alt="Icone Cost" srcset=""></td>
                         </tr>
                         <tr>
                             <td class="descript">Conta Energia</td>
                             <td class="negative">-R$ 220,00</td>
                             <td class="data">27/02/2022</td>
+                            <td><img src="/img/cost.svg" alt="Icone Cost" srcset=""></td>
                         </tr>
                         <tr>
                             <td class="descript">Pix Recebido</td>
                             <td class="positive">+R$  500,00</td>
                             <td class="data">28/02/2022</td>
+                            <td><img src="/img/credit.svg" alt="" srcset=""></td>
                         </tr>
                     </tbody>
                 </table>
             </section>
     </main>
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <div class="form">
+                <h2>Nova Transação</h2>
+                <form action="" class="">
+                    <div class="input-group">
+                        <label for="description" class="sr-only">Descricão</label>
+                        <input type="text" id="description" name="description" placeholder="Descricão">
+                    </div>
+                    <div class="input-group">
+                        <label for="amount" class="sr-only">Valor</label>
+                        <input type="number" id="amount" name="amount" placeholder="valor:0.00" step="0.01">
+                    </div>
+
+                    <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais</small>
+
+                    <div class="input-group">
+                        <label for="date" class="sr-only">data</label>
+                        <input type="date" id="date" name="date">
+                    </div>
+
+                    <div class="input-group actions">
+                        <a onclick="Modal.close()" class="btn-cancel" href="#">Cancelar</a>
+                        <button class="btn-salve">Salvar</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>dev.finance$</p>
     </footer>
+    <script src="/js/script.js"></script>
 </body>
 </html>
