add esc to close modal

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </section>
     </main>
 
-    <div onclick="Modal.outSideModal(event)" class="modal-overlay">
+    <div onclick="Modal.outSideModal(event), Modal.keyDownEsc()" class="modal-overlay">
         <div class="modal">
             <div class="form">
                 <h2>Nova Transação</h2>
